# django-compositepk-model

./: .gitignore  LICENSE  README.md  compositepk-model.sln  pyproject.toml
.github/workflows/: release.yml
compositepk-model/: compositepk-model.pyproj  db.sqlite3  manage.py  requirements.txt
compositepk-model/compositepk_model/: __init__.py  settings.py  urls.py  wsgi.py
compositepk-model/cpkmodel/: __init__.py  compositekey.py  constants.py  cpkmodel.py  cpkquery.py
compositepk-model/env1/Scripts/: activate  activate.bat
compositepk-model/test/: admin.py  forms.py  models.py  tests.py  views.py
compositepk-model/test/migration/: Createtable.sql
compositepk-model/test/templates/app/: Company.html  _model.html  album.html  album_create.html  check_keys.html  company_branch.html  company_branch_create.html  index.html  layout.html  musician.html  test_filter.html
