[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-compositepk-model"
version = "1.0.3"
dependencies = [
  "django>=3.2"
]
requires-python = ">= 3.6"
authors = [
  { name = "Arisophy", email = "arisophy@is-jpn.com" },
]
description = 'Extended Django Model class with composite-primary-key support'
readme = "README.md"
license = {text = "MIT License"}
keywords = ["composite primary keys", "django", "django-admin", "model", "Multi-Column Primary Key"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",

  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Arisophy/django-compositepk-model"
Repository = "https://github.com/Arisophy/django-compositepk-model.git"
Issues = "https://github.com/Arisophy/django-compositepk-model/issues"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "compositepk-model/cpkmodel/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["cpkmodel/"]

[tool.hatch.build.targets.wheel.force-include]
"compositepk-model/cpkmodel" = "cpkmodel"
